--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="giant">Giant.com</div>
+    <div class="giant">GIANT.com</div>
     <div class="normal-text">Reserved for Future Use</div>
     <div class="normal-text">
       <a href="mailto:support@giant.com">support@giant.com</a>
