--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Giant.com</title>
+  <title>Giant.com - Reserved for Future Use</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
+      font-family: Verdana, sans-serif;
       text-align: center;
     }
     .container {
@@ -16,12 +15,12 @@
     }
     .giant {
       font-size: 2em;
-      font-weight: bold;
+      font-weight: bold; 
     }
     .normal-text {
       font-size: 1.1em;
       margin: 0.6em 0;
-      font-weight: 400;
+      font-weight: 400; 
     }
     a {
       color: #333;
@@ -34,31 +33,23 @@
 </head>
 <body>
   <div class="container">
-    <div class="giant">GIANT.com</div>
+    <div class="giant">Giant.com</div>
     <div class="normal-text">Reserved for Future Use</div>
-    <div class="normal-text" id="email-container">
-      <!-- The email link will be added by JavaScript below. -->
-    </div>
+    <div class="normal-text" id="email-container"></div>
   </div>
 
   <script>
-    // Define parts of the email address separately
     const localPart = "support";
     const domain = "giant";
     const tld = "com";
 
-    // Construct the email address
     const emailAddress = localPart + "@" + domain + "." + tld;
-
-    // Construct the mailto link
     const mailtoLink = "mailto:" + emailAddress;
 
-    // Create a link element
     const link = document.createElement("a");
     link.href = mailtoLink;
     link.textContent = emailAddress;
 
-    // Append the link to the email container
     document.getElementById("email-container").appendChild(link);
   </script>
 </body>
