--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="giant">giant.com</div>
+    <div class="giant">Giant.com</div>
     <div class="normal-text">Reserved for Future Use</div>
     <div class="normal-text" id="email-container"></div>
   </div>
