--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <div class="container">
     <div class="giant">Giant.com</div>
-    <div class="normal-text">Exploring the World of Giants: Technology, Nature, Innovation. Reserved for Future Use</div>
+    <div class="normal-text">Exploring the World of Giants: Technology, Nature, Innovation.</div>
     <div class="normal-text" id="email-container"></div>
   </div>
 
